--- a/application/admin/view/order/task_add.html
+++ b/application/admin/view/order/task_add.html
@@ -319,7 +319,14 @@
         <div class="layui-col-md12 webody">
             <div class="layui-card main-table">
                 <!--<div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>下单关怀</div>-->
-
+                <div class="layui-card-header yty-card-header">
+                    <!--<span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>-->
+                    <span class="step step-number-active step-one">1</span><span class="step-active">第一步：时间设置</span>
+                    <span class="step-line"></span>
+                    <span class="step step-left step-tow-number">2</span><span class="step-two-msg">第二步：发送过滤</span>
+                    <span class="step-line"></span>
+                    <span class="step step-left step-three-number">3</span><span class="step-three-msg">第二步：短信编辑</span>
+                </div>
                 <div class="layui-card-body main-body">
                     <!--表格查询条件begin-->
                     <!--<div class="searchbody">-->
