--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2389,8 +2389,8 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 }
 
 .dashed-td tr>td{
-    /*border-bottom: 1px dashed #e5e5e5 !important;*/
-    /*padding: 20px 10px !important;*/
+    border-bottom: 1px dashed #dcdcdc !important;
+    padding: 10px 10px !important;
     height: 32px;
     line-height: 32px;
 }
