--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -69,6 +69,7 @@
         layer.load(0, {shade: false});
         var tableCommon = {
             elem: '#rule'
+//            ,height:"100%"
             ,method:'post'
 //            ,url:"{:url('Admin/auth.admin/index')}"
             ,url:"/sms_data.json" //对接请求后台数据
@@ -129,24 +130,21 @@
         /**
          * 表格初始化
          */
-        /*weTable.api.init({
+        weTable.api.init({
             table : "rule",
             tableid : "tableReload",
             form:$("form#formRule"),
             tableCommon: tableCommon,
             extend : {
-                "add_url": "{:url('admin/auth.admin/add','',false)}",
-                "edit_url": "{:url('admin/auth.admin/edit','',false)}/ids/",
-                "view_url": "{:url('admin/auth.admin/view','',false)}/ids",
-                "del_url": "{:url('admin/auth.admin/del','',false)}",
-                "export_url" : "{:url('admin/auth.admin/index','',false)}"
+                "add_url": "{:url('admin/order/task_add','',false)}",
+                "edit_url": "{:url('admin/order/task_add','',false)}/ids/",
             }
-        });*/
+        });
 
         /**
          * 绑定监听事件
          * */
-        //weTable.api.bindevent();
+        weTable.api.bindevent();
         formSearch.api.searchForm($("form#formRule"));
 
         //头工具栏事件
@@ -158,6 +156,15 @@
             }
         })
 
+        //表格工具栏事件
+        table.on('tool(rule)', function(obj){
+            console.log(obj.event);
+            if(obj.event == 'edit') {
+                var url = "{:url('admin/order/task_add')}"
+//                window.location.href = url;
+                we.api.open(url,'下单关怀 > 新建任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+            }
+        })
         //监听行工具事件
         /* table.on('tool(rule)', function(obj){
          var data = obj.data;
