--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2680,3 +2680,12 @@ input:focus, select:focus{
 .dashed-td tr>td.border-bottom{
     border-bottom: none !important;
 }
+
+.layui-table thead tr, .layui-table-header{
+    background-color: #ffffff !important;
+    padding: 0 auto;
+}
+
+.layui-table-header tr th{
+    font-weight: bold;
+}
