layui-card-header去掉

--- a/application/admin/view/order/task_add.html
+++ b/application/admin/view/order/task_add.html
@@ -554,7 +554,7 @@
                                             <div class="layui-col-md8">
                                                 <table class="layui-table table-border dashed-td" lay-skin="line" lay-size="sm">
                                                     <colgroup>
-                                                        <col class="yty_tdright" width="100px">
+                                                        <col class="yty_tdleft" width="110px">
                                                         <col class="yty_tdright">
                                                     </colgroup>
                                                     <tbody>
@@ -565,7 +565,7 @@
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="yty_tdright"><span class="red_color">*</span> 短信标签 :</td>
+                                                        <td class="yty_tdleft"><span class="red_color">*</span> 短信标签 :</td>
                                                         <td class="yty_tdright sms_label">
                                                             <ul class="ulstyle0">
                                                                 <li><a href="javascript:void(0);" id="buyer">收货人</a></li>
@@ -592,7 +592,7 @@
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="yty_tdright">短信测试 :</td>
+                                                        <td class="yty_tdleft">短信测试 :</td>
                                                         <td class="yty_tdright">
                                                             <input type="text" style="font-size: 12px;width: 300px;" name="test_phone" placeholder="请输入短信测试手机号，多个手机号用逗号(,)隔开" id="test_phone" value="" placeholder="" autocomplete="off" class="layui-input">
                                                             <button type="button" name="" id="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">短信测试</button>
