--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -188,7 +188,7 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody body-overflow">
             <div class="layui-card main-table">
-                <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>订单查询</div>
+                <!--<div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>订单查询</div>-->
                 <div class="layui-card-body layui-card-body-padding">
                     <!--表格查询条件begin-->
                     <div class="searchbody">
